--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
-<html>
-    <title>
-        Currículo 2022
-    </title>
-    <head>
-        <body>
-            <h1>Eu sou o corpo</h1>
-            <h2>Eu sou o corpo</h2>
-        </body>
-        <ol>
-            <li>Café</li>
-            <li>Chá</li>
-            <li>Leite</li>
-        </ol>
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Talita Fonseca CV</title>
+    <link href="style.css"  rel="stylesheet">
+</head>
+
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile-image">
+                    <img src="img/Talita1.jpg" alt="Profile image">    
+                    <p class="name"> Talita de Oliveira Fonseca</p>
+                    <p class="profession">Materials Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contact</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 79 99999-0000</li>
+                        <li><i class="fa fa-email"></i>+55 talita.oliveira@gmail.com</li>
+                        <li><i class="fa fa-endereço"></i>Aracaju-SE</li>
+                        <li><i class="fa fa-github"></i>TalitaFonseca09</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>Html, CSS, C#</p></li>
+                        <li><p>Git & GitHub</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about me">
+                    <div class="right-title">About me</div>
+                    <p class="about-me-contents">
+                        Olá sou Talita. <br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Quais são minhas competências
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>  
+</body>
 </html>
