--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <p class="left-title">Contact</p>
                     <ul>
                         <li><i class="fa fa-phone"></i>+55 79 99999-0000</li>
-                        <li><i class="fa fa-email"></i>+55 talita.oliveira@gmail.com</li>
+                        <li><i class="fa fa-email"></i>talita.oliveira@gmail.com</li>
                         <li><i class="fa fa-endereço"></i>Aracaju-SE</li>
                         <li><i class="fa fa-github"></i>TalitaFonseca09</li>
                     </ul>
@@ -37,7 +37,7 @@
         </section>
         <section class="right-section">
             <div class="right-section-contents">
-                <section class="about me">
+                <section class="about gap">
                     <div class="right-title">About me</div>
                     <p class="about-me-contents">
                         Olá sou Talita. <br>
@@ -46,6 +46,46 @@
                     </p>
                 </section>
             </div>
+            <section class ="experience gap">
+                <div class ="right-title">Experiência</div>
+                <div class ="experience-contents">
+                    <div class = "exp-left">
+                      <p class ="exp-company-name">Empresa 01</p>
+                      <p class ="exp-time-period">2021-Presente</p>
+
+                    </div>
+                </div>
+                <div class ="exp-right">
+                    <p class ="exp-position">Engenheira de Software</p>
+                    <p class ="exp-desc">
+                        Descreva aqui as principais atividades.
+                    </p>
+                </div>
+                <div class = "exp-left">
+                    <p class ="exp-company-name">Empresa 02</p>
+                    <p class ="exp-time-period">2019-2021</p>
+
+                  </div>
+              </div>
+              <div class ="exp-right">
+                  <p class ="exp-position">Engenheira de Software</p>
+                  <p class ="exp-desc">
+                      Descreva aqui as principais atividades.
+                  </p>
+              </div>
+              <div class = "exp-left">
+                <p class ="exp-company-name">Empresa 03</p>
+                <p class ="exp-time-period">2017-2018</p>
+
+              </div>
+          </div>
+          <div class ="exp-right">
+              <p class ="exp-position">Engenheira de Software</p>
+              <p class ="exp-desc">
+                  Descreva aqui as principais atividades.
+              </p>
+          </div>
+            </section>
         </section>
     </main>  
 </body>
