--- a/index.html
+++ b/index.html
@@ -49,42 +49,57 @@
             <section class ="experience gap">
                 <div class ="right-title">Experiência</div>
                 <div class ="experience-contents">
-                    <div class = "exp-left">
-                      <p class ="exp-company-name">Empresa 01</p>
-                      <p class ="exp-time-period">2021-Presente</p>
+                    <div class ="experience-left">
+                      <p class ="experience-company-name">Empresa 01</p>
+                      <p class ="experience-time-period">2021-Presente</p>
 
                     </div>
                 </div>
-                <div class ="exp-right">
-                    <p class ="exp-position">Engenheira de Software</p>
-                    <p class ="exp-desc">
+                <div class ="experience-right">
+                    <p class ="experience-position">Engenheira de Software</p>
+                    <p class ="experience-desc">
                         Descreva aqui as principais atividades.
                     </p>
                 </div>
-                <div class = "exp-left">
-                    <p class ="exp-company-name">Empresa 02</p>
-                    <p class ="exp-time-period">2019-2021</p>
+                <div class = "experience-left">
+                    <p class ="experience-company-name">Empresa 02</p>
+                    <p class ="experience-time-period">2019-2021</p>
 
-                  </div>
-              </div>
-              <div class ="exp-right">
-                  <p class ="exp-position">Engenheira de Software</p>
-                  <p class ="exp-desc">
+                </div>
+              
+                <div class ="experience-right">
+                  <p class ="experience-position">Engenheira de Software</p>
+                  <p class ="experience-desc">
                       Descreva aqui as principais atividades.
                   </p>
-              </div>
-              <div class = "exp-left">
-                <p class ="exp-company-name">Empresa 03</p>
-                <p class ="exp-time-period">2017-2018</p>
+                </div>
+            </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">UFS</p>
+                        <p class="education-time-period">2014~2019</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Materiais</p>
+                        <p class="education-desc">
+                            Graduação em engenharia de materiais
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">UFSCar</p>
+                        <p class="education-time-period">2020~2021</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós Graduação em engenharia de software
+                        </p>
+                    </div>
+                </div>
 
-              </div>
-          </div>
-          <div class ="exp-right">
-              <p class ="exp-position">Engenheira de Software</p>
-              <p class ="exp-desc">
-                  Descreva aqui as principais atividades.
-              </p>
-          </div>
+                
             </section>
         </section>
     </main>  
