--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talita Fonseca CV</title>
-    <link href="style.css"  rel="stylesheet">
+
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,14 +25,15 @@
                 <div class="profile-image">
                     <img src="img/Talita1.jpg" alt="Profile image">    
                     <p class="name"> Talita de Oliveira Fonseca</p>
-                    <p class="profession">Materials Engineer</p>
+                    <p class="profession">Engenheira de Materiais</p>
                 </div>
                 <div class="contact-info">
-                    <p class="left-title">Contact</p>
+                    <p class="left-title">Contatos</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 79 99999-0000</li>
-                        <li><i class="fa fa-email"></i>talita.oliveira@gmail.com</li>
-                        <li><i class="fa fa-endereço"></i>Aracaju-SE</li>
+                        <li><i class="fa fa-phone"></i>+55 79 99935-0090</li>
+                        <li><i class="fa fa-location-arrow"></i>Aracaju-SE</li>
+                        <li><i class="fa fa-envelope"></i>talita.fonseca09@gmail.com</li>
+                        <li><i class="fa fa-linkedin"></i>talita fonseca</li>
                         <li><i class="fa fa-github"></i>TalitaFonseca09</li>
                     </ul>
                 </div>
@@ -75,9 +86,9 @@
                       </p>
                     </div>
                 </div>
-            <section class="education gap">
-                <div class="right-title">Formação Acadêmica</div>
-                <div class="education-contents">
+                <section class="education gap">
+                   <div class="right-title">Formação Acadêmica</div>
+                   <div class="education-contents">
                     <div class="education-left">
                         <p class="education-school-name">UFS</p>
                         <p class="education-time-period">2014~2019</p>
@@ -98,33 +109,34 @@
                             Pós Graduação em engenharia de software
                         </p>
                     </div>
-                </div>
-            </section>
-            <section class="awards gap">
-                <div class="right-title">Cursos</div>
-                <div class="awards-contents">
-                    <div class="awards-left">
-                        <p class="awards-company-name">EBAC</p>
-                        <p class="awards-time-period">Junho de 2018</p>
+                </section>
+                <section class="awards gap">
+                  <div class="right-title">Cursos</div>
+                  <div class="awards-contents">
+                       <div class="awards-left">
+                            <p class="awards-company-name">EBAC</p>
+                            <p class="awards-time-period">Junho de 2018</p>
+                
+                        </div>
+                       <div class="awards-right">
+                             <p class="awards-name">Curso de UX</p>
+                            <p class="awards-desc">
+                                Curso realizado na EBAC no ano de 2018
+                            </p>
+                       </div>
+                       <div class="awards-left">
+                           <p class="awards-company-name">EBAC</p>
+                            <p class="awards-time-period">Abril de 2019</p>
+                       </div>
+                       <div class="awards-right">
+                           <p class="awards-name">Curso de Análise de Dados</p>
+                           <p class="awards-desc">
+                              Curso realizado na EBAC no ano de 2019
+                           </p>
+                       </div>
                     </div>
-                    <div class="awards-right">
-                        <p class="awards-name">Curso de UX</p>
-                        <p class="awards-desc">
-                            Curso realizado na EBAC no ano de 2018
-                        </p>
-                    </div>
-                    <div class="awards-left">
-                        <p class="awards-company-name">EBAC</p>
-                        <p class="awards-time-period">Abril de 2019</p>
-                    </div>
-                    <div class="awards-right">
-                        <p class="awards-name">Curso de Análise de Dados</p>
-                        <p class="awards-desc">
-                            Curso realizado na EBAC no ano de 2019
-                        </p>
-                    </div>
-                </div>
-            </section>
+               </section>
+            </div>
         </section>
     </main>  
 </body>
